feat(users): add users list route
