# openapi.yaml
@@ -25,25 +25,42 @@ paths:
             application/json:
               schema:
                 $ref: "#/components/schemas/GetUser"
-        "404":
-          description: User not found
-          content:
-            application/json:
-              schema:
-                $ref: "#/components/schemas/Error"
         "400":
           description: Validation error
           content:
             application/json:
               schema:
                 $ref: "#/components/schemas/ValidationError"
+        "404":
+          description: User not found
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/Error"
         "500":
           description: Internal server error
           content:
             application/json:
               schema:
                 $ref: "#/components/schemas/Error"
+
   /users:
+    get:
+      tags: [Users]
+      summary: Get users array
+      responses:
+        "200":
+          description: Users array
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/GetUsers"
+        "500":
+          description: Internal server error
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/Error"
     post:
       tags: [Users]
       summary: Create user
@@ -78,6 +95,7 @@ paths:
             application/json:
               schema:
                 $ref: "#/components/schemas/Error"
+
   /health:
     get:
       summary: Check if service healthy
@@ -85,14 +103,16 @@ paths:
         "200":
           description: Service is healthy
           content:
-            application/json:
+            text/plain:
               schema:
-                $ref: "#/components/schemas/GetUser"
+                type: string
+                example: Service is healthy
+
 components:
   schemas:
     GetUser:
       type: object
-      required: [id, fullName, birthDate, email, role]
+      required: [id, fullName, birthDate, email, role, isActive]
       properties:
         id:
           type: string
@@ -109,6 +129,14 @@ components:
         role:
           type: string
           enum: [user, admin]
+        isActive:
+          type: boolean
+
+    GetUsers:
+      type: array
+      items:
+        $ref: "#/components/schemas/GetUser"
+
     CreateUser:
       type: object
       required: [fullName, birthDate, email, password]
@@ -129,12 +157,14 @@ components:
           type: string
           enum: [user, admin]
           default: user
+
     Error:
       type: object
       required: [message]
       properties:
         message:
           type: string
+
     ValidationIssue:
       type: object
       required: [code, message, path]
@@ -147,6 +177,7 @@ components:
           type: array
           items:
             type: string
+
     ValidationError:
       type: object
       required: [message, issues]
