# src/modules/users/controller.ts
@@ -1,13 +1,14 @@
 import { Request, Response, NextFunction } from "express";
-import { createUser, findUserById } from "./service";
+import { createUser, findUserById, findUsers } from "./service";
 import { GetUserSchema } from "./dto/user.dto";
 import { CreateUser, CreateUserSchema } from "./schemas/createUser.schema";
 import { NotFoundError } from "@shared/errors/AppError";
+import { GetUsersSchema } from "./schemas/getUsers.schema";
 
 export async function getUserById(
   req: Request<{ id: string }>,
   res: Response,
-  next: NextFunction,
+  _next: NextFunction,
 ): Promise<void> {
   const user = await findUserById(req.params.id);
 
@@ -19,10 +20,22 @@ export async function getUserById(
   res.json(safe);
 }
 
+export async function getUsers(
+  _req: Request,
+  res: Response,
+  _next: NextFunction,
+): Promise<void> {
+  const users = await findUsers();
+
+  const safe = GetUsersSchema.parse(users);
+
+  res.json(safe);
+}
+
 export async function postUser(
   req: Request,
   res: Response,
-  next: NextFunction,
+  _next: NextFunction,
 ): Promise<void> {
   const user: CreateUser = CreateUserSchema.parse(req.body);
   const created = await createUser(user);
