# src/modules/users/routes.ts
@@ -1,5 +1,5 @@
 import { Router } from "express";
-import { getUserById, postUser } from "./controller";
+import { getUserById, getUsers, postUser } from "./controller";
 import { validateRequest } from "@shared/middlewares/validateRequest";
 import { GetUserParamSchema } from "./schemas/getUser.schema";
 import { CreateBodyUserSchema } from "./schemas/createUser.schema";
@@ -7,6 +7,7 @@ import { CreateBodyUserSchema } from "./schemas/createUser.schema";
 const router: Router = Router();
 
 router.get("/:id", validateRequest(GetUserParamSchema), getUserById);
+router.get("/", getUsers);
 router.post("/", validateRequest(CreateBodyUserSchema), postUser);
 
 export default router;
